--- a/eliza/packages/plugin-agentkit/package.json
+++ b/eliza/packages/plugin-agentkit/package.json
@@ -6,7 +6,7 @@
     "types": "dist/index.d.ts",
     "dependencies": {
         "@elizaos/core": "workspace:*",
-        "@coinbase/cdp-agentkit-core": "^0.0.10",
+        "@coinbase/cdp-agentkit-core": "file:../../../agentkit/typescript/agentkit",
         "@coinbase/cdp-langchain": "^0.0.11",
         "@langchain/core": "^0.3.27",
         "tsup": "8.3.5"
