--- a/eliza/packages/plugin-pyth-data/package.json
+++ b/eliza/packages/plugin-pyth-data/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@elizaos/core": "^0.1.7",
+        "@elizaos/plugin-pyth-data": "file:",
         "@pythnetwork/client": "^2.22.0",
         "@pythnetwork/hermes-client": "^1.3.0",
         "@solana/web3.js": "1.95.8",
