--- a/eliza/packages/plugin-agentkit/package.json
+++ b/eliza/packages/plugin-agentkit/package.json
@@ -7,7 +7,7 @@
     "dependencies": {
         "@elizaos/core": "workspace:*",
         "@coinbase/cdp-agentkit-core": "file:../../../agentkit/cdp-agentkit-core/typescript",
-        "@coinbase/cdp-langchain": "^0.0.11",
+        "@coinbase/cdp-langchain": "file:../../../agentkit/cdp-langchain/typescript",
         "@langchain/core": "^0.3.27",
         "tsup": "8.3.5"
     },
