update & deploy contract

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,6 +5,6 @@ libs = ["lib"]
 mappings = ["@openzeppelin/contracts=lib/openzeppelin/contracts"]
 
 [rpc_endpoints]
-base_sepolia = "https://base-sepolia-rpc.publicnode.com"
+base = "https://base-rpc.publicnode.com"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
