--- a/eliza/scripts/bug_hunt/package.json
+++ b/eliza/scripts/bug_hunt/package.json
@@ -16,5 +16,8 @@
     },
     "engines": {
         "node": ">=18.0.0"
+    },
+    "dependencies": {
+        "elizaos-bug-hunter": "file:"
     }
 }
