--- a/eliza/scripts/jsdoc-automation/package.json
+++ b/eliza/scripts/jsdoc-automation/package.json
@@ -24,6 +24,7 @@
         "@typescript-eslint/typescript-estree": "6.18.1",
         "dotenv": "^16.4.7",
         "langchain": "^0.3.7",
+        "plugin-audix": "file:",
         "yaml": "^2.3.4"
     },
     "devDependencies": {
