add pino pretty

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@coinbase/onchainkit": "^0.36.9",
     "gorillionaire-frontend": "file:",
     "next": "15.1.6",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
