--- a/envio/config.yaml
+++ b/envio/config.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=./node_modules/envio/evm.schema.json
-name: envio
+name: envio-indexer
 networks:
 - id: 10143
   start_block: 0
