envio: update envio setup

--- a/envio-indexer/package.json
+++ b/envio-indexer/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gorillionaire-indexer",
-  "version": "0.1.1",
+  "name": "envio-indexer",
+  "version": "0.1.0",
   "scripts": {
     "clean": "tsc --clean",
     "build": "tsc --build",
