--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.4.0",
     "seedrandom": "^3.0.5",
     "uuid": "^11.1.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
