--- a/langchain/package.json
+++ b/langchain/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@langchain/community": "^0.3.34",
+    "@supabase/supabase-js": "^2.49.1",
     "dotenv": "^16.4.7",
     "langchain": "^0.3.19",
     "mongodb": "^6.14.2"
