--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.36.9",
+    "@privy-io/react-auth": "^2.6.2",
     "ethers": "^6.13.5",
     "flowbite-react": "^0.10.2",
     "gorillionaire-frontend": "file:",
@@ -18,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
+    "viem": "^2.23.8",
     "wagmi": "^2.14.9"
   },
   "devDependencies": {
