--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "ethers": "^6.13.5",
     "flowbite-react": "^0.10.2",
     "gorillionaire-frontend": "file:",
+    "lightweight-charts": "^5.0.3",
     "next": "15.1.6",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
