--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "viem": "^2.23.8",
     "wagmi": "^2.14.9"
