--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^10.2.1",
     "mongoose": "^8.4.0",
+    "node-cron": "^3.0.3",
     "seedrandom": "^3.0.5",
     "uuid": "^11.1.0",
     "validator": "^13.12.0",
