Created nillion routes, secret vault settings, and fetchSignalData function to be called in the frontend

--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -14,3 +14,8 @@ ZERO_X_API_KEY=zero_x_api_key
 # Blockvision API configuration
 BLOCKVISION_API_URL=blockvision_api_url  # Base URL for Monad network
 BLOCKVISION_API_KEY=blockvision_api_key 
+
+# Nillion
+ORG_DID=
+ORG_SECRET_KEY=
+SCHEMA_ID=
