--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -19,6 +19,7 @@
     "mailgun.js": "^10.2.1",
     "mongoose": "^8.4.0",
     "node-cron": "^3.0.3",
+    "secretvaults": "^0.0.0-alpha.1",
     "seedrandom": "^3.0.5",
     "uuid": "^11.1.0",
     "validator": "^13.12.0",
