--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "contracts/lib/openzeppelin-contracts"]
 	path = contracts/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "access-nft/lib/forge-std"]
+	path = access-nft/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
