forge install: openzeppelin-contracts
v5.2.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "access-nft/lib/forge-std"]
 	path = access-nft/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "access-nft/lib/openzeppelin-contracts"]
+	path = access-nft/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
