--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "ethers": "^6.13.5",
     "flowbite-react": "^0.10.2",
     "gorillionaire-frontend": "file:",
+    "js-cookie": "^3.0.5",
     "lightweight-charts": "^5.0.3",
     "next": "15.1.6",
     "pino-pretty": "^13.0.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
