update readmes and envs

--- a/envio-indexer/.env.example
+++ b/envio-indexer/.env.example
@@ -1,2 +1,5 @@
-# To create or update a token visit https://envio.dev/app/api-tokens
-ENVIO_API_TOKEN="<YOUR-API-TOKEN>"
+ENVIO_API_TOKEN=
+ENVIO_TELEGRAM_BOT_TOKEN=
+ENVIO_TELEGRAM_CHAT_ID=
+ENVIO_API_BASE_URL=
+ENVIO_BACKEND_API_KEY=
