--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -5,11 +5,9 @@ PORT=server_port
 # JWT secret for authentication
 JWT_SECRET=your_jwt_secret_here
 
-#CODEX API KEY
 CODEX_API_KEY=codex_api_key
-
-# 0X API KEY
 ZERO_X_API_KEY=zero_x_api_key
+INDEXER_API_KEY=
 
 # Blockvision API configuration
 BLOCKVISION_API_URL=blockvision_api_url  # Base URL for Monad network
@@ -19,3 +17,7 @@ BLOCKVISION_API_KEY=blockvision_api_key
 ORG_DID=
 ORG_SECRET_KEY=
 SCHEMA_ID=
+
+# Telegram configuration
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
