--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gorillionaire-dummy-backend",
+  "name": "gorillionaire-2.0",
   "version": "1.0.0",
   "license": "UNLICENSED",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "start-gendoc": "node swagger.js"
   },
   "dependencies": {
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^10.2.1",
@@ -26,7 +26,15 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node-cron": "^3.0.11",
+    "@types/ws": "^8.18.0",
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.2"
   }
 }
