--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "gorillionaire-2.0",
   "version": "2.0.0",
-  "description": "Gorillionaire 2.0"
+  "description": "Gorillionaire 2.0",
+  "engines": {
+    "node": ">=18.x",
+    "yarn": ">=1.22.19"
+  }
 }
