--- a/envio-indexer/config.yaml
+++ b/envio-indexer/config.yaml
@@ -2,21 +2,20 @@
 name: envio-indexer
 
 contracts:
-  - name: Token
-    handler: src/EventHandlers.ts
-    events:
-      - event: Transfer(address indexed from, address indexed to, uint256 value)
-  - name: UniswapPoolFactory
-    handler: src/FactoryHandlers.ts
-    events:
-      - event: PoolCreated(address indexed token0, address indexed token1, uint24 indexed fee, int24 tickSpacing, address pool)
 
 networks:
   - id: 10143
     start_block: 0
     contracts:
+      - name: Token
+        handler: src/TokenHandlers.ts
+        events:
+          - event: Transfer(address indexed from, address indexed to, uint256 value)
       - name: UniswapPoolFactory
         address: 0x961235a9020B05C44DF1026D956D1F4D78014276
+        handler: src/FactoryHandlers.ts
+        events:
+          - event: PoolCreated(address indexed token0, address indexed token1, uint24 indexed fee, int24 tickSpacing, address pool)
 
 field_selection:
   transaction_fields:
