[GOR-46] add docker compose

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,6 @@ lit-config.json
 # Configuration to exclude the extra and local_docs directories
 extra
 **/dist/**
+
+# docker compose temp files
+docker-compose/timeseries/
