--- a/docker-compose/configs/nats.conf
+++ b/docker-compose/configs/nats.conf
@@ -8,7 +8,7 @@ jetstream {
   store_dir: /data/jetstream
   max_mem_store: 1Gb
   max_file_store: 10Gb
-  domain: "gorillioner"
+  domain: "gorillionaire"
 }
 
 # HTTP monitoring endpoint
