--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     ports:
       - "${ENVIO_PG_PORT:-5433}:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - /tmp/db_data:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: ${ENVIO_POSTGRES_PASSWORD:-testing}
       POSTGRES_USER: ${ENVIO_PG_USER:-postgres}
@@ -63,8 +63,8 @@ services:
       - "6222:6222"
       - "8222:8222"
     volumes:
-      - ./nats.conf:/etc/nats/nats.conf
-      - ./nats-data:/data
+      - ./configs/nats.conf:/etc/nats/nats.conf
+      - /tmp/nats-data:/data
     command: >
       -js
       -DV
@@ -79,21 +79,23 @@ services:
     command: |
       "
       sleep 2 &&
-      nats -s nats://host.docker.internal:4222 stream add GORILLIONER --config /etc/nats/gorillioner.stream.conf
+      nats -s nats://host.docker.internal:4222 stream info gorillionaire >/dev/null 2>&1 &&
+      nats -s nats://host.docker.internal:4222 stream update gorillionaire --config /etc/nats/gorillionaire.stream.conf --force ||
+      nats -s nats://host.docker.internal:4222 stream add --config /etc/nats/gorillionaire.stream.conf
       "
     volumes:
-      - ./configs/gorillioner.stream.conf:/etc/nats/gorillioner.stream.conf
+      - ./configs/gorillionaire.stream.conf:/etc/nats/gorillionaire.stream.conf
 
-  gorillioner-db:
+  gorillionaire-db:
     image: timescale/timescaledb:2.18.1-pg17
     environment:
-      - POSTGRES_DB=gorillioner
+      - POSTGRES_DB=gorillionaire
       - POSTGRES_USER=gorilli
       - POSTGRES_PASSWORD=gorilli
     ports:
       - "5452:5432"
     volumes:
-      - ./gorillioner-db:/var/lib/postgresql/data
+      - /tmp/gorillionaire-db:/var/lib/postgresql/data
     restart: always
     user: "999:999"
   migrations:
@@ -101,7 +103,7 @@ services:
       context: ../migrations
       dockerfile: Dockerfile
     depends_on:
-      - gorillioner-db
+      - gorillionaire-db
     env_file:
       - .env
     # volumes:
