--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -10,6 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Configure AWS Credentials
         uses: ./.github/workflows/aws_credentilas.yaml
         with:
