--- a/.github/workflows/aws_credentilas.yaml
+++ b/.github/workflows/aws_credentilas.yaml
@@ -12,6 +12,7 @@ jobs:
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
