--- a/.github/workflows/aws_credentials.yaml
+++ b/.github/workflows/aws_credentials.yaml
@@ -14,7 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
           aws-region: ${{ vars.AWS_REGION }}
+          role-session-name: github-actions-${{ inputs.environment }}
