--- a/.github/workflows/aws_credentials.yaml
+++ b/.github/workflows/aws_credentials.yaml
@@ -6,6 +6,11 @@ on:
       environment:
         required: true
         type: string
+    secrets:
+      AWS_ACCOUNT_ID:
+        required: true
+      AWS_DEPLOY_ROLE:
+        required: true
 
 jobs:
   credentials:
@@ -16,6 +21,6 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::960452239030:role/GitHubAction
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
           aws-region: ${{ vars.AWS_REGION }}
           role-session-name: github-actions-${{ inputs.environment }}
