--- a/.github/workflows/aws_deploy_infra.yaml
+++ b/.github/workflows/aws_deploy_infra.yaml
@@ -14,12 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ vars.AWS_REGION }}
+          terraform_version: 1.8.1
 
       - name: Deploy infrastructure
         run: |
