--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -12,6 +12,7 @@ jobs:
     uses: ./.github/workflows/aws_credentials.yaml
     with:
       environment: development
+      aws_region: ${{ vars.AWS_REGION }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       AWS_DEPLOY_ROLE: ${{ secrets.AWS_DEPLOY_ROLE }}
@@ -21,3 +22,5 @@ jobs:
     uses: ./.github/workflows/aws_deploy_infra.yaml
     with:
       environment: development
+      aws_region: ${{ vars.AWS_REGION }}
+      project_name: ${{ vars.PROJECT_NAME }}
