--- a/.github/workflows/aws_credentials.yaml
+++ b/.github/workflows/aws_credentials.yaml
@@ -7,8 +7,9 @@ on:
         required: true
         type: string
       aws_region:
-        required: true
+        required: false
         type: string
+        default: ${{ vars.AWS_REGION }}
     secrets:
       AWS_ACCOUNT_ID:
         required: true
