--- a/.github/workflows/aws_credentials.yaml
+++ b/.github/workflows/aws_credentials.yaml
@@ -6,14 +6,12 @@ on:
       environment:
         required: true
         type: string
-      aws_region:
-        required: false
-        type: string
-        default: ${{ vars.AWS_REGION }}
     secrets:
       AWS_ACCOUNT_ID:
         required: true
       AWS_DEPLOY_ROLE:
+        required: true
+      AWS_REGION:
         required: true
 
 jobs:
@@ -26,5 +24,5 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
-          aws-region: ${{ inputs.aws_region }}
+          aws-region: ${{ secrets.AWS_REGION }}
           role-session-name: github-actions-${{ inputs.environment }}
