--- a/.github/workflows/aws_deploy_infra.yaml
+++ b/.github/workflows/aws_deploy_infra.yaml
@@ -12,13 +12,28 @@ on:
       project_name:
         required: true
         type: string
+    secrets:
+      AWS_ACCOUNT_ID:
+        required: true
+      AWS_DEPLOY_ROLE:
+        required: true
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE }}
+          aws-region: ${{ inputs.aws_region }}
+          role-session-name: github-actions-${{ inputs.environment }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
