--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -2,26 +2,16 @@ on:
   push:
     branches:
       - '**'
-
-permissions:
-    id-token: write
-    contents: read
+env:
+  AWS_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
-  configure-aws:
-
-    uses: ./.github/workflows/aws_credentials.yaml
-    with:
-      environment: development
-    secrets:
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-      AWS_DEPLOY_ROLE: ${{ secrets.AWS_DEPLOY_ROLE }}
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-
   deploy-infra:
-    needs: configure-aws
     uses: ./.github/workflows/aws_deploy_infra.yaml
     with:
       environment: development
-      aws_region: ${{ vars.AWS_REGION }}
       project_name: ${{ vars.PROJECT_NAME }}
+      aws_region: ${{ env.AWS_REGION }}
+    secrets:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      AWS_DEPLOY_ROLE: ${{ secrets.AWS_DEPLOY_ROLE }}
