--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -2,8 +2,6 @@ on:
   push:
     branches:
       - '**'
-env:
-  AWS_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
   deploy-infra:
@@ -11,7 +9,7 @@ jobs:
     with:
       environment: development
       project_name: ${{ vars.PROJECT_NAME }}
-      aws_region: ${{ env.AWS_REGION }}
+      aws_region: ${{ secrets.AWS_REGION }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       AWS_DEPLOY_ROLE: ${{ secrets.AWS_DEPLOY_ROLE }}
